# challenge

./: README.md
challenge/: README.md  docker-compose.yml
challenge/backend/: .env  .gitignore  Dockerfile  boot.sh  pyproject.toml
challenge/backend/backend/bookings/: apps.py  choices.py  models.py  tests.py  urls.py
challenge/backend/backend/bookings/api/: routing.py  serializers.py  viewsets.py
challenge/backend/backend/bookings/migrations/: 0001_initial.py
challenge/backend/config/: settings.py  urls.py
challenge/frontend/: .env  Dockerfile  nginx.Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json
challenge/frontend/src/: App.tsx
challenge/frontend/src/components/: CreateBookingSection.tsx  Datepicker.tsx  IconButton.tsx  InputText.tsx  LoadingSpinner.tsx  Modal.tsx  TestComponent.tsx
challenge/frontend/src/lib/: asyncWrapper.ts  calendar.ts
challenge/frontend/src/queries/: endpoints.ts
challenge/frontend/src/services/: bookings.ts  types.ts
